# MathLib

./: AdvancedMathOpsTest.h  BasicMathOps.h  CMakeLists.txt  MyMathLib.h  main.cpp
.github/workflows/: cmake-single-platform.yml  cmake.yml
tests/: AdvancedMathOpsTest.cpp  BasicMathOpsTest.cpp
